--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "start": "node ./bin/www",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "seed": "node scripts/seedDB.js"
   },
   "devDependencies": {
     "bootstrap": "^4.1.1"
